<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".EmployeeActivity">


    <TextView
        android:id="@+id/pageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_interface"
        android:textSize="40dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/userDetails"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogout"
        android:text="@string/logout"/>

</LinearLayout>